Example jlink command